--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -37,5 +37,8 @@
     <item
         android:id="@+id/menu_contacts"
         android:title="@string/menu_contacts"/>
-
+    <item
+        android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"/>
+    
 </menu>
