Simplified/persistent filters

--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -9,6 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
+        android:id="@+id/tvEditMsg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:text="@string/msg_edit"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="48dip"
         android:drawableLeft="?attr/icon_used"
