Add filter on user applications

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -201,6 +201,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
+                <View
+                    android:layout_width="24dp"
+                    android:layout_height="24dp" />
+
+                <CheckBox
+                    android:id="@+id/cbFUser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="4dp"
+                    android:text="@string/title_fuser"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
