--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -6,8 +6,8 @@
           android:icon="?attr/icon_help"
           android:showAsAction="always" />
     <item
-        android:id="@+id/menu_all"
-        android:title="@string/menu_all"/>
+        android:id="@+id/menu_apply"
+        android:title="@string/menu_apply"/>
     <item
         android:id="@+id/menu_clear"
         android:title="@string/menu_clear"/>
