--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -201,9 +201,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
-                <View
+                <ImageView
                     android:layout_width="24dp"
-                    android:layout_height="24dp" />
+                    android:layout_height="24dp"
+                    android:contentDescription="@string/title_fuser"
+                    android:src="@drawable/user" />
 
                 <CheckBox
                     android:id="@+id/cbFUser"
