Added setting to enable Android usage data

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -287,6 +287,12 @@
         </TableLayout>
 
         <CheckBox
+            android:id="@+id/cbUsage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_usage" />
+
+        <CheckBox
             android:id="@+id/cbLog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
