Option to randomize subscriber ID (ICC)
Fixes #690

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -279,7 +279,7 @@
                     android:text="@string/settings_subscriber"
                     android:textIsSelectable="false" />
 
-                <View />
+                <CheckBox android:id="@+id/cbSubscriber" />
 
                 <EditText
                     android:id="@+id/etSubscriber"
