Added setting to disable update notification (per application)
Fixes #635

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -315,6 +315,12 @@
         </TableLayout>
 
         <CheckBox
+            android:id="@+id/cbNotify"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_notify" />
+
+        <CheckBox
             android:id="@+id/cbUsage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
