Add hint for location search field

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -89,6 +89,7 @@
 
                 <EditText
                     android:id="@+id/etSearch"
+                    android:hint="Christmas Island"
                     android:inputType="textNoSuggestions" />
             </TableRow>
 
