--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-	<item android:id="@+id/menu_help"
-          android:title="@string/menu_help"
-          android:icon="?attr/icon_help"
-          android:showAsAction="always" />
+    <item
+        android:id="@+id/menu_help"
+        android:icon="?attr/icon_help"
+        android:showAsAction="always"
+        android:title="@string/menu_help"/>
     <item
         android:id="@+id/menu_apply"
         android:title="@string/menu_apply"/>
@@ -41,10 +42,13 @@
         android:id="@+id/menu_accounts"
         android:title="@string/menu_accounts"/>
     <item
+        android:id="@+id/menu_applications"
+        android:title="@string/menu_applications"/>
+    <item
         android:id="@+id/menu_contacts"
         android:title="@string/menu_contacts"/>
     <item
         android:id="@+id/menu_settings"
         android:title="@string/menu_settings"/>
-    
+
 </menu>
