Fix category all

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,7 +8,7 @@
         android:title="@string/menu_help"/>
     <item
         android:id="@+id/menu_all"
-        android:title="@string/menu_all"/>
+        android:title="@string/menu_restriction_all"/>
     <item
         android:id="@+id/menu_usage"
         android:title="@string/menu_usage"/>
