--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -326,6 +326,12 @@
             android:text="@string/settings_usage" />
 
         <CheckBox
+            android:id="@+id/cbExtra"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_extra" />
+
+        <CheckBox
             android:id="@+id/cbLog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
