--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -35,11 +35,25 @@
         <item name="icon_clear">@drawable/cross_holo_light</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_light</item>
         <item name="icon_frozen">@drawable/frozen_holo_light</item>
-        <item name="drawable_background">@color/home_background_ligth</item>
+        <item name="drawable_background">@color/home_background_light</item>
         <item name="drawable_card">@drawable/card_light</item>
         <item name="drawable_divider">@drawable/divider_light</item>
         <item name="drawable_checkbox_bg">@drawable/bg_checkbox_light</item>
         <item name="color_dangerous">@color/color_dangerous_light</item>
+    </style>
+    
+    <style name="CustomTheme.Light.Dialog" parent="android:Theme.Holo.Light">
+        <item name="android:windowSoftInputMode">stateHidden|adjustResize</item>
+        <!-- Allows window to resize when keyboard shows, but also makes the window fullscreen and the titlebar small -->
+        <item name="android:windowIsFloating">false</item>
+        <!-- Seems to make the window still appear like a dialog, not totally fullscreen but still wider than before -->
+        <item name="android:windowActionBar">true</item>
+    </style>
+    
+    <style name="CustomTheme.Dialog" parent="android:Theme.Holo.Dialog">
+        <item name="android:windowSoftInputMode">stateHidden|adjustResize</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowActionBar">true</item>
     </style>
 
 </resources>
