Filtering and batchmode tab tweaks

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -33,7 +33,7 @@
             
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="38sp"
                 android:orientation="horizontal" >
 
 	            <TextView
