--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -22,48 +22,42 @@
         android:paddingBottom="6dp"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
-        android:paddingTop="1dp" >
+        android:paddingTop="6dp" >
 
         <!-- Filters and batch mode -->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/drawable_divider" >
             
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="38sp"
-                android:orientation="horizontal" >
+           <LinearLayout
+               android:layout_width="fill_parent"
+               android:layout_height="38sp"
+               android:orientation="horizontal"
+               android:background="?attr/drawable_divider" >
 
-	            <TextView
-	                android:id="@+id/tvFilterDetail"
-	                android:layout_width="0dp"
-	                android:layout_height="fill_parent"
-	                android:layout_weight="1"
-	                android:gravity="center"
-	                android:background="#F4F4F4"
-	                android:textAppearance="?android:attr/textAppearanceSmall" />
-	            
-	            <View
-	                android:layout_width="1dp"
-	                android:layout_height="32dp"
-	                android:background="#E5E5E5" />
-	
-	            <TextView
-	                android:id="@+id/tvBatchModeDetail"
-	                android:layout_width="0dp"
-	                android:layout_height="fill_parent"
-	                android:layout_weight="1"
-	                android:gravity="center"
-	                android:background="#F4F4F4"
-	                android:text="@string/title_batch_mode_off"
-	                android:maxLines="1"
-	                android:ellipsize="end"
-	                android:textAppearance="?android:attr/textAppearanceSmall" />
-	        </LinearLayout>
+            <TextView
+                android:id="@+id/tvFilterDetail"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="#F4F4F4"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
             
-        </RelativeLayout>
+            <View
+                android:layout_width="1dp"
+                android:layout_height="32dp"
+                android:background="#E5E5E5" />
+
+            <TextView
+                android:id="@+id/tvBatchModeDetail"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="#F4F4F4"
+                android:text="@string/title_batch_mode_off"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
 
         <!-- Filtering -->
 
