--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -25,22 +25,22 @@
         android:paddingTop="6dp" >
 
         <!-- Filters and batch mode -->
-            
-           <LinearLayout
-               android:layout_width="fill_parent"
-               android:layout_height="38sp"
-               android:orientation="horizontal"
-               android:background="?attr/drawable_divider" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="38sp"
+            android:background="?attr/drawable_divider"
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/tvFilterDetail"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:background="#F4F4F4"
+                android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
-            
+
             <View
                 android:layout_width="1dp"
                 android:layout_height="32dp"
@@ -51,11 +51,10 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:background="#F4F4F4"
-                android:text="@string/title_batch_mode_off"
-                android:maxLines="1"
                 android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="1"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
 
@@ -68,35 +67,35 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:orientation="vertical" >
-            
-	        <RelativeLayout
+
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal" >
-	
-	            <EditText
-	                android:id="@+id/etFilter"
-	                android:layout_width="fill_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_marginLeft="27dp"
-	                android:layout_marginRight="3dp"
-	                android:ems="10"
-	                android:hint="@string/help_application"
-	                android:inputType="textNoSuggestions"
-	                android:textAppearance="?android:attr/textAppearanceSmall" />
-	
-	            <ImageView
-	                android:id="@+id/imgClear"
-	                android:layout_width="24dip"
-	                android:layout_height="24dip"
-	                android:layout_alignRight="@id/etFilter"
-	                android:layout_centerVertical="true"
-	                android:background="@drawable/bg_button"
-	                android:clickable="true"
-	                android:contentDescription="@string/help_application"
-	                android:focusable="true"
-	                android:src="?attr/icon_clear_grayed" />
-	        </RelativeLayout>
+
+                <EditText
+                    android:id="@+id/etFilter"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="27dp"
+                    android:layout_marginRight="3dp"
+                    android:ems="10"
+                    android:hint="@string/help_application"
+                    android:inputType="textNoSuggestions"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <ImageView
+                    android:id="@+id/imgClear"
+                    android:layout_width="24dip"
+                    android:layout_height="24dip"
+                    android:layout_alignRight="@id/etFilter"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/bg_button"
+                    android:clickable="true"
+                    android:contentDescription="@string/help_application"
+                    android:focusable="true"
+                    android:src="?attr/icon_clear_grayed" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -229,7 +228,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
         </LinearLayout>
-        
+
         <!-- Batch mode -->
 
         <LinearLayout
@@ -240,7 +239,8 @@
             android:layout_marginRight="4dp"
             android:orientation="horizontal" >
 
-            <!-- <TextView
+            <!--
+                 <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -266,7 +266,6 @@
                 android:focusable="true"
                 android:src="?attr/icon_info" />
         </LinearLayout>
-        
     </LinearLayout>
 
     <!-- Title -->
