--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -24,7 +24,7 @@
         android:paddingRight="6dp"
         android:paddingTop="6dp" >
 
-        <!-- Filters and batch mode -->
+        <!-- Filters and categories -->
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -37,28 +37,26 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background="#F4F4F4"
                 android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="32dp"
-                android:background="#E5E5E5" />
+                android:background="@color/color_filter_border" />
 
             <TextView
-                android:id="@+id/tvBatchModeDetail"
+                android:id="@+id/tvCategoryDetail"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background="#F4F4F4"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
 
-        <!-- Filtering -->
+        <!-- Filters -->
 
         <LinearLayout
             android:id="@+id/llFilters"
@@ -229,10 +227,10 @@
             </LinearLayout>
         </LinearLayout>
 
-        <!-- Batch mode -->
+        <!-- Categories -->
 
         <LinearLayout
-            android:id="@+id/llBatchMode"
+            android:id="@+id/llCategories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
