--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -37,7 +37,9 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:gravity="center"
+                android:maxLines="1"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <View
